영업 시간 저장 방식 수정 및 꽃집 대표 이미지 및 소개 이미지 필드 추가